3º_TL/Actividad6/expresiones.output
Grammar

    0 $accept: entrada $end

    1 entrada: ε
    2        | entrada linea

    3 linea: ID ASIGNACION expr '\n'
    4      | ID ASIGNACION expr COMENTARIO
    5      | ID ASIGNACION logico '\n'
    6      | ID ASIGNACION logico COMENTARIO
    7      | error '\n'
    8      | error COMENTARIO

    9 expr: ENTERO
   10     | REAL
   11     | ID
   12     | expr '+' expr
   13     | expr '-' expr
   14     | expr '*' expr
   15     | expr DIV expr
   16     | expr '/' expr
   17     | expr '%' expr
   18     | expr '^' expr
   19     | '-' expr
   20     | '(' expr ')'

   21 logico: BOOLEANO
   22       | logico AND logico
   23       | logico OR logico
   24       | logico EQUALS logico
   25       | logico NOTEQUALS logico
   26       | expr EQUALS expr
   27       | expr NOTEQUALS expr
   28       | expr '<' expr
   29       | expr '>' expr
   30       | expr LOWEREQUALS expr
   31       | expr GREATEREQUALS expr
   32       | '(' logico ')'
   33       | NOT logico


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 3 5 7
    '%' (37) 17
    '(' (40) 20 32
    ')' (41) 20 32
    '*' (42) 14
    '+' (43) 12
    '-' (45) 13 19
    '/' (47) 16
    '<' (60) 28
    '>' (62) 29
    '^' (94) 18
    error (256) 7 8
    DIV (258) 15
    AND (259) 22
    OR (260) 23
    NOT (261) 33
    EQUALS (262) 24 26
    NOTEQUALS (263) 25 27
    LOWEREQUALS (264) 30
    GREATEREQUALS (265) 31
    ASIGNACION (266) 3 4 5 6
    COMENTARIO (267) 4 6 8
    ENTERO <c_entero> (268) 9
    REAL <c_real> (269) 10
    ID <var> (270) 3 4 5 6 11
    BOOLEANO <c_bool> (271) 21
    menos (272)


Nonterminals, with rules where they appear

    $accept (29)
        on left: 0
    entrada (30)
        on left: 1 2
        on right: 0 2
    linea (31)
        on left: 3 4 5 6 7 8
        on right: 2
    expr <c_expresion> (32)
        on left: 9 10 11 12 13 14 15 16 17 18 19 20
        on right: 3 4 12 13 14 15 16 17 18 19 20 26 27 28 29 30 31
    logico <c_bool> (33)
        on left: 21 22 23 24 25 26 27 28 29 30 31 32 33
        on right: 5 6 22 23 24 25 32 33


State 0

    0 $accept: • entrada $end

    $default  reduce using rule 1 (entrada)

    entrada  go to state 1


State 1

    0 $accept: entrada • $end
    2 entrada: entrada • linea

    $end   shift, and go to state 2
    error  shift, and go to state 3
    ID     shift, and go to state 4

    linea  go to state 5


State 2

    0 $accept: entrada $end •

    $default  accept


State 3

    7 linea: error • '\n'
    8      | error • COMENTARIO

    COMENTARIO  shift, and go to state 6
    '\n'        shift, and go to state 7


State 4

    3 linea: ID • ASIGNACION expr '\n'
    4      | ID • ASIGNACION expr COMENTARIO
    5      | ID • ASIGNACION logico '\n'
    6      | ID • ASIGNACION logico COMENTARIO

    ASIGNACION  shift, and go to state 8


State 5

    2 entrada: entrada linea •

    $default  reduce using rule 2 (entrada)


State 6

    8 linea: error COMENTARIO •

    $default  reduce using rule 8 (linea)


State 7

    7 linea: error '\n' •

    $default  reduce using rule 7 (linea)


State 8

    3 linea: ID ASIGNACION • expr '\n'
    4      | ID ASIGNACION • expr COMENTARIO
    5      | ID ASIGNACION • logico '\n'
    6      | ID ASIGNACION • logico COMENTARIO

    NOT       shift, and go to state 9
    ENTERO    shift, and go to state 10
    REAL      shift, and go to state 11
    ID        shift, and go to state 12
    BOOLEANO  shift, and go to state 13
    '-'       shift, and go to state 14
    '('       shift, and go to state 15

    expr    go to state 16
    logico  go to state 17


State 9

   33 logico: NOT • logico

    NOT       shift, and go to state 9
    ENTERO    shift, and go to state 10
    REAL      shift, and go to state 11
    ID        shift, and go to state 12
    BOOLEANO  shift, and go to state 13
    '-'       shift, and go to state 14
    '('       shift, and go to state 15

    expr    go to state 18
    logico  go to state 19


State 10

    9 expr: ENTERO •

    $default  reduce using rule 9 (expr)


State 11

   10 expr: REAL •

    $default  reduce using rule 10 (expr)


State 12

   11 expr: ID •

    $default  reduce using rule 11 (expr)


State 13

   21 logico: BOOLEANO •

    $default  reduce using rule 21 (logico)


State 14

   19 expr: '-' • expr

    ENTERO  shift, and go to state 10
    REAL    shift, and go to state 11
    ID      shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 21


State 15

   20 expr: '(' • expr ')'
   32 logico: '(' • logico ')'

    NOT       shift, and go to state 9
    ENTERO    shift, and go to state 10
    REAL      shift, and go to state 11
    ID        shift, and go to state 12
    BOOLEANO  shift, and go to state 13
    '-'       shift, and go to state 14
    '('       shift, and go to state 15

    expr    go to state 22
    logico  go to state 23


State 16

    3 linea: ID ASIGNACION expr • '\n'
    4      | ID ASIGNACION expr • COMENTARIO
   12 expr: expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • DIV expr
   16     | expr • '/' expr
   17     | expr • '%' expr
   18     | expr • '^' expr
   26 logico: expr • EQUALS expr
   27       | expr • NOTEQUALS expr
   28       | expr • '<' expr
   29       | expr • '>' expr
   30       | expr • LOWEREQUALS expr
   31       | expr • GREATEREQUALS expr

    DIV            shift, and go to state 24
    EQUALS         shift, and go to state 25
    NOTEQUALS      shift, and go to state 26
    LOWEREQUALS    shift, and go to state 27
    GREATEREQUALS  shift, and go to state 28
    COMENTARIO     shift, and go to state 29
    '<'            shift, and go to state 30
    '>'            shift, and go to state 31
    '+'            shift, and go to state 32
    '-'            shift, and go to state 33
    '*'            shift, and go to state 34
    '/'            shift, and go to state 35
    '%'            shift, and go to state 36
    '^'            shift, and go to state 37
    '\n'           shift, and go to state 38


State 17

    5 linea: ID ASIGNACION logico • '\n'
    6      | ID ASIGNACION logico • COMENTARIO
   22 logico: logico • AND logico
   23       | logico • OR logico
   24       | logico • EQUALS logico
   25       | logico • NOTEQUALS logico

    AND         shift, and go to state 39
    OR          shift, and go to state 40
    EQUALS      shift, and go to state 41
    NOTEQUALS   shift, and go to state 42
    COMENTARIO  shift, and go to state 43
    '\n'        shift, and go to state 44


State 18

   12 expr: expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • DIV expr
   16     | expr • '/' expr
   17     | expr • '%' expr
   18     | expr • '^' expr
   26 logico: expr • EQUALS expr
   27       | expr • NOTEQUALS expr
   28       | expr • '<' expr
   29       | expr • '>' expr
   30       | expr • LOWEREQUALS expr
   31       | expr • GREATEREQUALS expr

    DIV            shift, and go to state 24
    EQUALS         shift, and go to state 25
    NOTEQUALS      shift, and go to state 26
    LOWEREQUALS    shift, and go to state 27
    GREATEREQUALS  shift, and go to state 28
    '<'            shift, and go to state 30
    '>'            shift, and go to state 31
    '+'            shift, and go to state 32
    '-'            shift, and go to state 33
    '*'            shift, and go to state 34
    '/'            shift, and go to state 35
    '%'            shift, and go to state 36
    '^'            shift, and go to state 37


State 19

   22 logico: logico • AND logico
   23       | logico • OR logico
   24       | logico • EQUALS logico
   25       | logico • NOTEQUALS logico
   33       | NOT logico •

    $default  reduce using rule 33 (logico)


State 20

   20 expr: '(' • expr ')'

    ENTERO  shift, and go to state 10
    REAL    shift, and go to state 11
    ID      shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 45


State 21

   12 expr: expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • DIV expr
   16     | expr • '/' expr
   17     | expr • '%' expr
   18     | expr • '^' expr
   19     | '-' expr •

    $default  reduce using rule 19 (expr)


State 22

   12 expr: expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • DIV expr
   16     | expr • '/' expr
   17     | expr • '%' expr
   18     | expr • '^' expr
   20     | '(' expr • ')'
   26 logico: expr • EQUALS expr
   27       | expr • NOTEQUALS expr
   28       | expr • '<' expr
   29       | expr • '>' expr
   30       | expr • LOWEREQUALS expr
   31       | expr • GREATEREQUALS expr

    DIV            shift, and go to state 24
    EQUALS         shift, and go to state 25
    NOTEQUALS      shift, and go to state 26
    LOWEREQUALS    shift, and go to state 27
    GREATEREQUALS  shift, and go to state 28
    '<'            shift, and go to state 30
    '>'            shift, and go to state 31
    '+'            shift, and go to state 32
    '-'            shift, and go to state 33
    '*'            shift, and go to state 34
    '/'            shift, and go to state 35
    '%'            shift, and go to state 36
    '^'            shift, and go to state 37
    ')'            shift, and go to state 46


State 23

   22 logico: logico • AND logico
   23       | logico • OR logico
   24       | logico • EQUALS logico
   25       | logico • NOTEQUALS logico
   32       | '(' logico • ')'

    AND        shift, and go to state 39
    OR         shift, and go to state 40
    EQUALS     shift, and go to state 41
    NOTEQUALS  shift, and go to state 42
    ')'        shift, and go to state 47


State 24

   15 expr: expr DIV • expr

    ENTERO  shift, and go to state 10
    REAL    shift, and go to state 11
    ID      shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 48


State 25

   26 logico: expr EQUALS • expr

    ENTERO  shift, and go to state 10
    REAL    shift, and go to state 11
    ID      shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 49


State 26

   27 logico: expr NOTEQUALS • expr

    ENTERO  shift, and go to state 10
    REAL    shift, and go to state 11
    ID      shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 50


State 27

   30 logico: expr LOWEREQUALS • expr

    ENTERO  shift, and go to state 10
    REAL    shift, and go to state 11
    ID      shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 51


State 28

   31 logico: expr GREATEREQUALS • expr

    ENTERO  shift, and go to state 10
    REAL    shift, and go to state 11
    ID      shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 52


State 29

    4 linea: ID ASIGNACION expr COMENTARIO •

    $default  reduce using rule 4 (linea)


State 30

   28 logico: expr '<' • expr

    ENTERO  shift, and go to state 10
    REAL    shift, and go to state 11
    ID      shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 53


State 31

   29 logico: expr '>' • expr

    ENTERO  shift, and go to state 10
    REAL    shift, and go to state 11
    ID      shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 54


State 32

   12 expr: expr '+' • expr

    ENTERO  shift, and go to state 10
    REAL    shift, and go to state 11
    ID      shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 55


State 33

   13 expr: expr '-' • expr

    ENTERO  shift, and go to state 10
    REAL    shift, and go to state 11
    ID      shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 56


State 34

   14 expr: expr '*' • expr

    ENTERO  shift, and go to state 10
    REAL    shift, and go to state 11
    ID      shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 57


State 35

   16 expr: expr '/' • expr

    ENTERO  shift, and go to state 10
    REAL    shift, and go to state 11
    ID      shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 58


State 36

   17 expr: expr '%' • expr

    ENTERO  shift, and go to state 10
    REAL    shift, and go to state 11
    ID      shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 59


State 37

   18 expr: expr '^' • expr

    ENTERO  shift, and go to state 10
    REAL    shift, and go to state 11
    ID      shift, and go to state 12
    '-'     shift, and go to state 14
    '('     shift, and go to state 20

    expr  go to state 60


State 38

    3 linea: ID ASIGNACION expr '\n' •

    $default  reduce using rule 3 (linea)


State 39

   22 logico: logico AND • logico

    NOT       shift, and go to state 9
    ENTERO    shift, and go to state 10
    REAL      shift, and go to state 11
    ID        shift, and go to state 12
    BOOLEANO  shift, and go to state 13
    '-'       shift, and go to state 14
    '('       shift, and go to state 15

    expr    go to state 18
    logico  go to state 61


State 40

   23 logico: logico OR • logico

    NOT       shift, and go to state 9
    ENTERO    shift, and go to state 10
    REAL      shift, and go to state 11
    ID        shift, and go to state 12
    BOOLEANO  shift, and go to state 13
    '-'       shift, and go to state 14
    '('       shift, and go to state 15

    expr    go to state 18
    logico  go to state 62


State 41

   24 logico: logico EQUALS • logico

    NOT       shift, and go to state 9
    ENTERO    shift, and go to state 10
    REAL      shift, and go to state 11
    ID        shift, and go to state 12
    BOOLEANO  shift, and go to state 13
    '-'       shift, and go to state 14
    '('       shift, and go to state 15

    expr    go to state 18
    logico  go to state 63


State 42

   25 logico: logico NOTEQUALS • logico

    NOT       shift, and go to state 9
    ENTERO    shift, and go to state 10
    REAL      shift, and go to state 11
    ID        shift, and go to state 12
    BOOLEANO  shift, and go to state 13
    '-'       shift, and go to state 14
    '('       shift, and go to state 15

    expr    go to state 18
    logico  go to state 64


State 43

    6 linea: ID ASIGNACION logico COMENTARIO •

    $default  reduce using rule 6 (linea)


State 44

    5 linea: ID ASIGNACION logico '\n' •

    $default  reduce using rule 5 (linea)


State 45

   12 expr: expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • DIV expr
   16     | expr • '/' expr
   17     | expr • '%' expr
   18     | expr • '^' expr
   20     | '(' expr • ')'

    DIV  shift, and go to state 24
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36
    '^'  shift, and go to state 37
    ')'  shift, and go to state 46


State 46

   20 expr: '(' expr ')' •

    $default  reduce using rule 20 (expr)


State 47

   32 logico: '(' logico ')' •

    $default  reduce using rule 32 (logico)


State 48

   12 expr: expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • DIV expr
   15     | expr DIV expr •
   16     | expr • '/' expr
   17     | expr • '%' expr
   18     | expr • '^' expr

    '^'  shift, and go to state 37

    $default  reduce using rule 15 (expr)


State 49

   12 expr: expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • DIV expr
   16     | expr • '/' expr
   17     | expr • '%' expr
   18     | expr • '^' expr
   26 logico: expr EQUALS expr •

    DIV  shift, and go to state 24
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36
    '^'  shift, and go to state 37

    $default  reduce using rule 26 (logico)


State 50

   12 expr: expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • DIV expr
   16     | expr • '/' expr
   17     | expr • '%' expr
   18     | expr • '^' expr
   27 logico: expr NOTEQUALS expr •

    DIV  shift, and go to state 24
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36
    '^'  shift, and go to state 37

    $default  reduce using rule 27 (logico)


State 51

   12 expr: expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • DIV expr
   16     | expr • '/' expr
   17     | expr • '%' expr
   18     | expr • '^' expr
   30 logico: expr LOWEREQUALS expr •

    DIV  shift, and go to state 24
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36
    '^'  shift, and go to state 37

    $default  reduce using rule 30 (logico)


State 52

   12 expr: expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • DIV expr
   16     | expr • '/' expr
   17     | expr • '%' expr
   18     | expr • '^' expr
   31 logico: expr GREATEREQUALS expr •

    DIV  shift, and go to state 24
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36
    '^'  shift, and go to state 37

    $default  reduce using rule 31 (logico)


State 53

   12 expr: expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • DIV expr
   16     | expr • '/' expr
   17     | expr • '%' expr
   18     | expr • '^' expr
   28 logico: expr '<' expr •

    DIV  shift, and go to state 24
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36
    '^'  shift, and go to state 37

    $default  reduce using rule 28 (logico)


State 54

   12 expr: expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • DIV expr
   16     | expr • '/' expr
   17     | expr • '%' expr
   18     | expr • '^' expr
   29 logico: expr '>' expr •

    DIV  shift, and go to state 24
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36
    '^'  shift, and go to state 37

    $default  reduce using rule 29 (logico)


State 55

   12 expr: expr • '+' expr
   12     | expr '+' expr •
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • DIV expr
   16     | expr • '/' expr
   17     | expr • '%' expr
   18     | expr • '^' expr

    DIV  shift, and go to state 24
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36
    '^'  shift, and go to state 37

    $default  reduce using rule 12 (expr)


State 56

   12 expr: expr • '+' expr
   13     | expr • '-' expr
   13     | expr '-' expr •
   14     | expr • '*' expr
   15     | expr • DIV expr
   16     | expr • '/' expr
   17     | expr • '%' expr
   18     | expr • '^' expr

    DIV  shift, and go to state 24
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36
    '^'  shift, and go to state 37

    $default  reduce using rule 13 (expr)


State 57

   12 expr: expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   14     | expr '*' expr •
   15     | expr • DIV expr
   16     | expr • '/' expr
   17     | expr • '%' expr
   18     | expr • '^' expr

    '^'  shift, and go to state 37

    $default  reduce using rule 14 (expr)


State 58

   12 expr: expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • DIV expr
   16     | expr • '/' expr
   16     | expr '/' expr •
   17     | expr • '%' expr
   18     | expr • '^' expr

    '^'  shift, and go to state 37

    $default  reduce using rule 16 (expr)


State 59

   12 expr: expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • DIV expr
   16     | expr • '/' expr
   17     | expr • '%' expr
   17     | expr '%' expr •
   18     | expr • '^' expr

    '^'  shift, and go to state 37

    $default  reduce using rule 17 (expr)


State 60

   12 expr: expr • '+' expr
   13     | expr • '-' expr
   14     | expr • '*' expr
   15     | expr • DIV expr
   16     | expr • '/' expr
   17     | expr • '%' expr
   18     | expr • '^' expr
   18     | expr '^' expr •

    $default  reduce using rule 18 (expr)


State 61

   22 logico: logico • AND logico
   22       | logico AND logico •
   23       | logico • OR logico
   24       | logico • EQUALS logico
   25       | logico • NOTEQUALS logico

    EQUALS     shift, and go to state 41
    NOTEQUALS  shift, and go to state 42

    $default  reduce using rule 22 (logico)


State 62

   22 logico: logico • AND logico
   23       | logico • OR logico
   23       | logico OR logico •
   24       | logico • EQUALS logico
   25       | logico • NOTEQUALS logico

    AND        shift, and go to state 39
    EQUALS     shift, and go to state 41
    NOTEQUALS  shift, and go to state 42

    $default  reduce using rule 23 (logico)


State 63

   22 logico: logico • AND logico
   23       | logico • OR logico
   24       | logico • EQUALS logico
   24       | logico EQUALS logico •
   25       | logico • NOTEQUALS logico

    $default  reduce using rule 24 (logico)


State 64

   22 logico: logico • AND logico
   23       | logico • OR logico
   24       | logico • EQUALS logico
   25       | logico • NOTEQUALS logico
   25       | logico NOTEQUALS logico •

    $default  reduce using rule 25 (logico)
